chore: use java language features